# runtimechooser

./: .gitignore  LICENSE  README.md
examples/: CMakeLists.txt  example.cc  example_cuda.cu  example_one_sequence.cc  example_to_string.cc  example_two_sequences.cc
include/: SequenceRunner.h  SequenceRunnerFrontend.h
include/pre_c++11/: SequenceRunnerFrontend_pre_c++11.h  SequenceRunner_pre_c++11.h
